# flask-aws-cognito

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: push_main.yml
src/cognito/: app.py  config.py
