[tool.poetry]
name = "cognito"
version = "0.1.0"
description = ""
authors = ["Jonathan Gonzalez <jgonf@safebytelabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
boto3 = "^1.34.33"
environs = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
