[tool.poetry]
name = "flask-aws-cognito"
version = "0.1.0"
description = ""
authors = ["Jonathan González <jgonf@safebytelabs.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.1"
boto3 = "^1.34.33"
environs = "^10.3.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
